# rs-reports-gen

./: .env  .gitignore  .pre-commit-config.yaml  README.md  RSReportsGen.code-workspace  graphql.config.json  pyproject.toml  rpt-igo-project.code-workspace  rpt-rivers-need-space.code-workspace  ruff.toml
.devcontainer/: bootstrap.sh  devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: implement-rpt-downstream-geomorphic-metadata.prompt.md  plan-pbiSemanticModelAutomation.prompt.md  prompt.md
docs/: metadata-architecture.md  report_parameters_summary.csv  wiring-up-from-cybercastor.md
execution-scripts/: fargate-rpt-igo-project.sh
power_bi/: .gitignore  example_data_with_bins.pbip
power_bi/example_data_with_bins.Report/: definition.pbir
power_bi/example_data_with_bins.Report/definition/: report.json
power_bi/example_data_with_bins.Report/definition/bookmarks/: bookmarks.json
power_bi/example_data_with_bins.SemanticModel/definition/: expressions.tmdl
power_bi/example_data_with_bins/example_data_with_bins.Report/: .platform
power_bi/example_data_with_bins/example_data_with_bins.SemanticModel/: .platform  diagramLayout.json
python/rpt-igo-project/: athena_query_aoi.py  athenacsv_to_rme.py  main.py  pyproject.toml  rme_table_column_defs.csv
python/rpt-rivers-need-space/: figures.py  main.py  pyproject.toml  util_athena.py  util_athena_query_aoi.py
python/rpt-rivers-need-space/templates/: p_template.html
python/tests/: test_est_rows_for_csv_file.py  test_est_rows_for_csv_file.results.txt  test_simplify_to_size.py
python/util/: athena.py  athena_query_aoi.py  pyproject.toml  rs_geo_helpers.py
scripts/: learn_questionary.py  report_launcher.py  serve_report.py
scripts/automation/: fargate-rpt-beaver-restoration-potential.sh  fargate-rpt-data-mart.sh  fargate-rpt-downstream-geomorphic-styles.sh  fargate-rpt-downstream-geomorphic.sh  fargate-rpt-igo-project.sh  fargate-rpt-igo-scraper.sh  fargate-rpt-pbr-explorer.sh  fargate-rpt-rivers-need-space-project.sh  fargate-rpt-rivers-need-space.sh  fargate-rpt-riverscapes-dynamics.sh  fargate-rpt-riverscapes-inventory.sh  fargate-rpt-stream-names.sh  fargate-rpt-watershed.sh
scripts/devtools/: check_report_version_drift.py
scripts/exploration/: compare_wkb_methods.ipynb  exploration.ipynb  profile_chart.ipynb
scripts/exploration/climate_engine/: climate_engine_api.py
scripts/exploration/datamart/: datamart_map_helpers.py  explore_datamart.ipynb
scripts/exploration/epa/: test_attains.py
scripts/exploration/rsdynamics/: exploration.ipynb
scripts/exploration/rsinventory/: nm_explore.ipynb  try_lonboard.py
src/: __init__.py
src/api/: RSReportsAPI.py  downloadInputs.py  uploadOutputs.py  uploadPublic.py
src/api/classes/: RSReportsAPI.py
src/api/graphql/: rs_reports.schema.gql
src/api/lib/: RSReportsAPI.py  file_utils.py  multipart_upload.py  upload.py
src/reports/: __init__.py
src/reports/rpt_beaver_restoration_potential/: __init__.py  dataprep.py  figures.py  launch.py  main.py
src/reports/rpt_data_mart/: CHANGELOG.md  __init__.py  dataprep.py  launch.py  main.py
src/reports/rpt_downstream_geomorphic/: __init__.py  dataprep.py  figures.py  launch.py  main.py  selection_mode.py
src/reports/rpt_igo_project/: CHANGELOG.md  README.md  __init__.py  athena_query_aoi.py  athenacsv_to_rme.py  launch.py  main.py  rawrme_to_igos_project.py
src/reports/rpt_pbr_explorer/: CHANGELOG.md  dataprep.py  figures.py  launch.py  main.py  pbr_project_meta.csv
src/reports/rpt_pbrexplorer/: __init__.py  dataprep.py  launch.py  main.py  pbr_project_meta.csv
src/reports/rpt_rivers_need_space/: CHANGELOG.md  README.md  dataprep.py  figures.py  get_data.py  launch.py  main.py
src/reports/rpt_riverscapes_dynamics/: CHANGELOG.md  __init__.py  epoch_utils.py  figures.py  launch.py  main.py
src/reports/rpt_riverscapes_inventory/: CHANGELOG.md  README.md  __init__.py  dataprep.py  figures.py  launch.py  main.py
src/reports/rpt_stream_names/: CHANGELOG.md  __init__.py  colour_gradient.py  dataprep.py  figures.py  launch.py  main.py
src/reports/rpt_watershed/: CHANGELOG.md  launch.py  main.py
src/reports/rpt_watershed_summary/: CHANGELOG.md  __init__.py  figures.py  launch.py  main.py
src/util/: __init__.py  attains_assessment.py  binning.py  bins-schema.json  bins.json  climate_engine_connections.py  color.py  csvhelper.py  dataframe_to_html.py  figures.py  file_utils.py  math_functions.py  metadata_export.py  pbi_format.py  pbi_model.py  prompt.py  report_entrypoint.py  rs_geo_helpers.py  summary.py
src/util/athena/: __init__.py  athena.py  athena_unload_utils.py  query_aoi.py  test_aoi_query_performance.py  test_unload_json.py  test_unload_pq.py
src/util/examples/: metric_format_demo.py  pint_pandas_example.py  units.py
src/util/html/: RSReport.py  __init__.py
src/util/maplibre/: map_figure.py
src/util/pandas/: RSFieldMeta.py  RSGeoDataFrame.py  __init__.py  pandas_utilities.py  test.py
src/util/pdf/: __init__.py  create_pdf.py
src/util/plotly/: export_figure.py  horizontal_bar_charts.py  pie_charts.py  playwright_export.py  vertical_bar_charts.py
src/util/rme/: convert_to_tabledefjson.py  field_metadata.py  rme_common_dataprep.py  table_def.schema.json  test_bin_generation.py
tests/: test_apply_all_bins.py  test_athena_functions.py  test_climate_engine_api.py  test_est_rows_for_csv_file.py  test_est_rows_for_csv_file.results.txt  test_figures_format_value.py  test_geopandas_export.py  test_metric_cards_preferred_format.py  test_parse_hucs.py  test_pbi_format_translation.py  test_pbi_model_tmdl_generation.py  test_prepare_aoi_query.py  test_report_smoke.py  test_rpt_beaver_restoration_potential_dataprep.py  test_rpt_downstream_geomorphic_figures.py  test_rpt_pbr_explorer_export.py  test_rs_field_meta_apply_units.py  test_rs_field_meta_duplicate_meta.py  test_rs_field_meta_explicit_units.py  test_rs_field_meta_preferred_units_truth_table.py  test_rs_field_meta_units.py  test_rs_reports_api.py  test_run_aoi_athena_query.py  test_simplify_to_size.py
(+155 files in other folders)
