[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-reports"
version = "0.1.0"
description = "Report Generator"
authors = [{ name = "Lorin Gaertner", email = "info@northarrowresearch.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apsw>=3.50.4.0",
    "boto3>=1.40.30",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "inquirer>=3.4.1",
    "jinja2>=3.1.6",
    "kaleido>=1.1.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "rsxml>=2.0.6",
    "shapely>=2.1.1",
    "weasyprint>=66.0",
]

[project.scripts]
rpt-igo-project = "reports.igo_project.main:main"
rpt-rivers-need-space = "reports.rivers_need_space.main:main"

[tool.uv]
package-dir = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reports.igo_project" = [
    "rme_table_column_defs.csv",
]
"reports.rivers_need_space" = [
    "templates/*.html",
    "templates/*.css",
    "example_inputs/*.geojson",
]
