[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-reports"
version = "0.1.0"
description = "Report Generator"
authors = [{ name = "Lorin Gaertner", email = "info@northarrowresearch.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apsw>=3.50.4.0",
    "awswrangler>=3.10.1",
    "boto3>=1.40.30",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "inquirer>=3.4.1",
    "jinja2>=3.1.6",
    "kaleido>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pint>=0.25",
    "pint-pandas>=0.7.1",
    "plotly>=6.3.0",
    "psutil>=7.1.0",
    "pyarrow>=22.0.0",
    "requests>=2.31.0",
    "rsxml>=2.0.6",
    "shapely>=2.1.1",
    "termcolor>=3.1.0",
    "weasyprint>=66.0",
    "wordcloud>=1.9.4",
]

[project.scripts]
rpt-igo-project = "reports.rpt_igo_project.main:main"
rpt-rivers-need-space = "reports.rpt_rivers_need_space.main:main"

# Install these using uv by typing: "uv pip install ".[dev]"
[project.optional-dependencies]
dev = [
    "ipython",
    "nbformat",
    "pytest",
    "ipykernel",
    "python-dotenv",
    # add any other dev-only packages here
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reports.rivers_need_space" = [
    "templates/*.html",
    "templates/*.css",
    "example_inputs/*.geojson",
]
