[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-reports"
version = "0.1.0"
description = "Report Generator"
authors = [{ name = "Lorin Gaertner", email = "info@northarrowresearch.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apsw>=3.50.4.0",
    "awswrangler>=3.10.1",
    "boto3>=1.40.30",
    "duckdb>=1.4.4",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "jinja2>=3.1.6",
    "questionary>=2.1.0",
    "kaleido>=1.1.0",
    "lonboard>=0.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pint>=0.25",
    "pint-pandas>=0.7.1",
    "plotly>=6.3.0",
    "psutil>=7.1.0",
    "pyarrow>=22.0.0",
    "requests>=2.31.0",
    "rsxml>=2.0.6",
    "shapely>=2.1.1",
    "termcolor>=3.1.0",
    "weasyprint>=66.0",
    "wordcloud>=1.9.4",
    "markdown>=3.10.2",
]

[project.scripts]
rpt-igo-project = "reports.rpt_igo_project.main:main"
rpt-rivers-need-space = "reports.rpt_rivers_need_space.main:main"
rpt-data-mart = "reports.rpt_data_mart.main:main"
rpt-downstream-geomorphic = "reports.rpt_downstream_geomorphic.main:main"

# Install these using uv by typing: "uv pip install ".[dev]"
[project.optional-dependencies]
dev = [
    "ipython",
    "nbformat",
    "pytest",
    "ipykernel",
    "python-dotenv",
    # add any other dev-only packages here
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reports.rivers_need_space" = [
    "templates/*.html",
    "templates/*.css",
    "example_inputs/*.geojson",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "ruff>=0.9.0",
]

# Ruff configuration - no impact if not using Ruff
[tool.ruff]
line-length = 240
target-version = "py312"

[tool.ruff.lint]
# E (Pycodestyle Errors): Standard PEP 8 formatting errors (e.g., whitespace, line length).
# F (Pyflakes): Finds logical errors like unused imports, undefined variables, or f-strings without placeholders. Keep this.
# UP (Pyupgrade): Automatically upgrades syntax to match your Python version (e.g., changes List[str] to list[str] since you are on 3.12). Highly recommended.
# I (Isort): Sorts your imports automatically. Very helpful.
# (Bugbear): Detects likely bugs and design problems (e.g., mutable default arguments).
# N (PEP8 Naming): Enforces naming conventions (snake_case for functions, CapWords for classes). If your codebase is older, this might flag a lot of things.
# W Pycodestyle warnings - should we add this??

select = ["E", "F", "I", "N", "UP", "B"]
ignore = [
    "B018",   # NotImplementedError raised directly
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
