[project]
name = "rpt-igo-project"
version = "0.1.0"
description = "Report Generator - IGO project for supplied AOI from athena raw-rme"
authors = [{ name = "Lorin Gaertner", email = "info@northarrowresearch.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apsw>=3.50.4.0",
    "boto3>=1.40.28",
    "geopandas>=1.1.1",
    "rsxml>=2.0.6",
]

[project.scripts]
rpt-igo-project = "main:main"