[project]
name = "rpt-rivers-need-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "apsw>=3.50.4.0",
    "boto3>=1.40.30",
    "branca>=0.8.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "rsxml>=2.0.6",
    "shapely>=2.1.1",
]
