[project]
name = "rpt-rivers-need-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apsw>=3.50.4.0",
    "boto3>=1.40.30",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "jinja2>=3.1.6",
    "kaleido>=1.1.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "rsxml>=2.0.6",
    "shapely>=2.1.1",
    "weasyprint>=66.0",
]
